# depths

./: .gitignore  README.md  pyproject.toml  rough.py
depths/: README.md  main.py
depths/index/: __init__.py  binary.py  kcenter.py
depths/io/: arrow.py  delta.py
depths/logger/: core.py  llm.py
tests/: test_arrow_io.py  test_llm_logging.py
